increse font size in ex02

--- a/cell02/ex02/parallax.css
+++ b/cell02/ex02/parallax.css
@@ -27,6 +27,8 @@ body, html {
   justify-content: center;        /* center horizontally */
   align-items: center;            /* center vertically */
   color: white;                   /* text color */
+  font-size: 50px;
+  font-style:oblique;
 }
 
 /* Normal content */
